update translation of books/porters-handbook to Russian
Reviewed by: maxim (mentor) and arrowd
Approved by: maxim (mentor) and carlavilla
Differential Revision: https://reviews.freebsd.org/D52053

--- a/documentation/content/ru/books/porters-handbook/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/_index.adoc
@@ -1,15 +1,19 @@
 ---
-title: Руководство FreeBSD по созданию портов
-authors: 
-  - author: The FreeBSD Documentation Project
-copyright: 2000-2020 The FreeBSD Documentation Project
-trademarks: ["freebsd", "sun", "unix", "general"]
-next: books/porters-handbook/porting-why
 add_single_page_link: true
-showBookMenu: true
-weight: 0
+authors:
+  - 
+    author: 'The FreeBSD Documentation Project'
+bookOrder: 15
+copyright: '2000-2023 The FreeBSD Documentation Project'
+description: 'Обязательно к прочтению, если вы планируете портировать стороннее программное обеспечение'
+next: books/porters-handbook/porting-why
 params:
-  path: "/books/porters-handbook/"
+  path: /books/porters-handbook/
+showBookMenu: true
+tags: "[\"FreeBSD Porter's Handbook\", \"Porting\", \"FreeBSD Ports Collection\"]"
+title: 'Руководство FreeBSD по созданию портов'
+trademarks: ["freebsd", "sun", "unix", "general"]
+weight: 0
 ---
 
 = Руководство FreeBSD по созданию портов
