--- a/documentation/content/ru/books/porters-handbook/book.adoc
+++ b/documentation/content/ru/books/porters-handbook/book.adoc
@@ -1,13 +1,16 @@
 ---
-title: Руководство FreeBSD по созданию портов
-authors: 
-  - author: The FreeBSD Documentation Project
-copyright: 2000-2020 The FreeBSD Documentation Project
-trademarks: ["freebsd", "sun", "unix", "general"]
 add_split_page_link: true
+authors:
+  - 
+    author: 'The FreeBSD Documentation Project'
+copyright: '2000-2023 The FreeBSD Documentation Project'
+description: 'Обязательно к прочтению, если вы планируете портировать стороннее программное обеспечение'
+tags: "[\"FreeBSD Porter's Handbook\", \"Porting\", \"FreeBSD Ports Collection\"]"
+title: 'Руководство FreeBSD по созданию портов'
+trademarks: ["freebsd", "sun", "unix", "general"]
 ---
 
-= FreeBSD Porter's Handbook
+= Руководство FreeBSD по созданию портов
 :doctype: book
 :toc: macro
 :toclevels: 2
@@ -52,6 +55,7 @@ include::{chapters-path}quick-porting/_index.adoc[leveloffset=+1]
 include::{chapters-path}slow-porting/_index.adoc[leveloffset=+1]
 include::{chapters-path}makefiles/_index.adoc[leveloffset=+1]
 include::{chapters-path}special/_index.adoc[leveloffset=+1]
+include::{chapters-path}flavors/_index.adoc[leveloffset=+1]
 include::{chapters-path}plist/_index.adoc[leveloffset=+1]
 include::{chapters-path}pkg-files/_index.adoc[leveloffset=+1]
 include::{chapters-path}testing/_index.adoc[leveloffset=+1]
@@ -59,6 +63,7 @@ include::{chapters-path}upgrading/_index.adoc[leveloffset=+1]
 include::{chapters-path}security/_index.adoc[leveloffset=+1]
 include::{chapters-path}porting-dads/_index.adoc[leveloffset=+1]
 include::{chapters-path}porting-samplem/_index.adoc[leveloffset=+1]
+include::{chapters-path}order/_index.adoc[leveloffset=+1]
 include::{chapters-path}keeping-up/_index.adoc[leveloffset=+1]
 include::{chapters-path}uses/_index.adoc[leveloffset=+1]
 include::{chapters-path}versions/_index.adoc[leveloffset=+1]
