--- a/documentation/content/ru/books/porters-handbook/new-port/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/new-port/_index.adoc
@@ -1,15 +1,17 @@
 ---
-title: Глава 2. Как самому сделать новый порт
-prev: books/porters-handbook/porting-why
+description: 'Как сделать новый порт'
 next: books/porters-handbook/quick-porting
-showBookMenu: true
-weight: 2
 params:
-  path: "/books/porters-handbook/new-port/"
+  path: /books/porters-handbook/new-port/
+prev: books/porters-handbook/porting-why
+showBookMenu: true
+tags: ["new port", "upgrading", "guidelines", "ports"]
+title: 'Глава 2. Как самому сделать новый порт'
+weight: 2
 ---
 
 [[own-port]]
-= Making a New Port
+= Как самому сделать новый порт
 :doctype: book
 :toc: macro
 :toclevels: 1
@@ -57,4 +59,4 @@ endif::[]
 Только часть переменных (`_VAR_`), которые могут быть переопределены, описаны в этом документе. Большинство (если не все) описаны в начале файла [.filename]#/usr/ports/Mk/bsd.port.mk#; остальные, скорее всего, тоже там описаны. Заметьте, что в этом файле используется нестандартная настройка шага табуляции: Emacs и Vim должны распознать это при загрузке файла. Как man:vi[1], так и man:ex[1] могут быть настроены на использование правильного значения выдачей команды `:set tabstop=4` после загрузки файла.
 ====
 
-Ищете, с чего бы начать попроще? Посмотрите на http://wiki.freebsd.org/WantedPorts[перечень запрошенных портов], есть ли там такие, над которыми вы можете работать.
+Ищете, с чего бы начать попроще? Посмотрите на https://wiki.freebsd.org/WantedPorts[перечень запрошенных портов], есть ли там такие, над которыми вы можете работать.
