--- a/documentation/content/ru/books/porters-handbook/porting-why/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/porting-why/_index.adoc
@@ -1,11 +1,13 @@
 ---
-title: Глава 1. Введение
-prev: books/porters-handbook/
+description: 'Почему добавляют программы в коллекцию портов FreeBSD'
 next: books/porters-handbook/new-port
-showBookMenu: true
-weight: 1
 params:
-  path: "/books/porters-handbook/porting-why/"
+  path: /books/porters-handbook/porting-why/
+prev: books/porters-handbook
+showBookMenu: true
+tags: ["ports", "why porting"]
+title: 'Глава 1. Введение'
+weight: 1
 ---
 
 [[why-port]]
